src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__if_then_with_unexpected_token.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error: Could not resolve reference to CHARLIE
  ┌─ <internal>:3:17
  │
3 │         IF TRUE CHARLIE
  │                 ^^^^^^^ Could not resolve reference to CHARLIE


